WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305686
[Site Isolation] Fix ProcessSwap.NavigatingCrossOriginFromCOOPSameOrigin
https://bugs.webkit.org/show_bug.cgi?id=305686
Summary
[Site Isolation] Fix ProcessSwap.NavigatingCrossOriginFromCOOPSameOrigin
Sihui Liu
Reported
2026-01-16 20:48:54 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-16 20:50:00 PST
<
rdar://problem/168343832
>
Sihui Liu
Comment 2
2026-01-16 22:00:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56755
EWS
Comment 3
2026-01-23 15:09:11 PST
Committed
306121@main
(213223523e3b): <
https://commits.webkit.org/306121@main
> Reviewed commits have been landed. Closing PR #56755 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug