Source/WebCore/page/Frame.cpp
@@ -387,6 +387,19 @@ void Frame::setPrinting(bool printing, FloatSize pageSize, FloatSize originalPag
         loaderClient().setPrinting(printing, pageSize, originalPageSize, maximumShrinkRatio, shouldAdjustViewSize);
 }
 
+SecurityOrigin& Frame::topOrigin() const
+{
+    if (RefPtr page = this->page())
+        return page->mainFrameOrigin();
+
+    return SecurityOrigin::opaqueOrigin();
+}
+
+Ref<SecurityOrigin> Frame::protectedTopOrigin() const
+{
+    return topOrigin();
+}
+
 float Frame::frameScaleFactor() const
 {
     RefPtr page = this->page();
