Source/WebCore/page/LocalFrame.h
@@ -112,6 +112,7 @@ enum class WindowProxyProperty : uint8_t;
 using SandboxFlags = OptionSet<SandboxFlag>;
 using IntDegrees = int32_t;
 
+struct DocumentSecurityPolicy;
 struct OverrideScreenSize;
 struct SimpleRange;
 
@@ -375,6 +376,7 @@ private:
     void loadFrameRequest(FrameLoadRequest&&, Event*) final;
     void didFinishLoadInAnotherProcess() final;
     SecurityOrigin* frameDocumentSecurityOrigin() const final;
+    std::optional<DocumentSecurityPolicy> frameDocumentSecurityPolicy() const final;
     String frameURLProtocol() const final;
 
     FrameView* virtualView() const final;
